# FreeRDP

./: CMakeLists.txt
client/: .gitignore
client/common/: cmdline.c
client/tsgcat/: CMakeLists.txt  ModuleOptions.cmake  tsgcat.c
cmake/: ConfigOptions.cmake
include/freerdp/: settings.h
libfreerdp/common/: settings.c
libfreerdp/core/: proxy.c  settings.c  tcp.c  transport.c  transport.h
